Fixed social media spacing

--- a/portal/static/portal/sass/partials/_footer.scss
+++ b/portal/static/portal/sass/partials/_footer.scss
@@ -51,6 +51,8 @@
   }
 
   .social-media {
+    align-items: center;
+    display: flex;
     margin-top: 10px;
   }
 
